--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,11 @@ jobs:
           fetch-depth: 2
           
       - name: Get changed files
+        id: changed_files
         uses: tj-actions/changed-files@v4.2
         
       - name: Format changed files
-        id: changed_files
+        id: formatted_changed_files
         run: |
           for file in "${{ steps.changed_files.outputs.all_modified_files }}"; do
             file = "$file\n"
@@ -28,4 +29,4 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             Files changed:
-            ${{ steps.changed_files.outputs.all_modified_files }}
+            ${{ steps.formatted_changed_files.outputs.all_modified_files }}
