--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,18 +15,12 @@ jobs:
       - name: Get changed files
         id: changed_files
         uses: tj-actions/changed-files@v4.2
-        
-      - name: Format changed files
-        id: formatted_changed_files
-        run: |
-          for file in "${{ steps.changed_files.outputs.all_modified_files }}"; do
-            file = "$file\n"
-          done
+        with:
+          separator: "\n"
         
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            Files changed:
-            ${{ steps.formatted_changed_files.outputs.all_modified_files }}
+            ${{ steps.changed_files.outputs.all_modified_files }}
