--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         id: changed_files
         uses: tj-actions/changed-files@v4.2
         with:
-          separator: "\n"
+          separator: ","
         
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
