--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,18 @@ jobs:
         uses: tj-actions/changed-files@v4.2
         with:
           separator: "\\n"
+          
+      - name: Format comment
+        id: format-comment
+        run: |
+          body=$(cat ${{ steps.changed_files.outputs.all_modified_files }})
+          body="${body//$'\n'/'%0A'}"
+          echo ::set-output name=body::$body
         
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            ${{ steps.changed_files.outputs.all_modified_files }}
+            ${{ steps.format-comment.outputs.body }}
+# ${{ steps.changed_files.outputs.all_modified_files }}
