--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,19 @@ jobs:
       - name: Get changed files
         id: changed_files
         uses: tj-actions/changed-files@v4.2
+        with:
+          separator: ","
           
-      - name: List all modified files
-        run: |
-          for file in "${{ steps.changed_files.outputs.all_modified_files }}"; do
-            echo "$file"
-          done
+      - uses: bluwy/substitute-string-action@v1
+        id: sub
+        with:
+          _input-text: ${{ steps.changed_files.outputs.all_modified_files }}
+          ,: '%0A'
         
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            ${{ steps.changed_files.outputs.all_modified_files }}
+            ${{ steps.sub.outputs.result }}
+    # ${{ steps.changed_files.outputs.all_modified_files }}
