--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,6 @@ jobs:
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.pull_request.number }}
-          body: ${{ steps.get-comment-body.outputs.body }}
-#          body: |
-#            ${{ steps.changed_files.outputs.all_modified_files }}
+          body: |
+            Files changed:
+            ${{ steps.get-comment-body.outputs.body }}
